# cc-touch-fish

./: .gitignore  CLAUDE_CODE_HOOKS_SETUP.md  README.md  SPEC.md  index.html  package.json  pnpm-lock.yaml
public/resources/pets/alice/: animation.json
public/resources/pets/sally/: animation.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  http_server.rs  lib.rs  main.rs
src/components/: ApprovalModal.tsx  HomePage.tsx  PetCanvas.tsx  SettingsWindow.tsx
src/data/: pets.json
src/stores/: petStore.ts
