[package]
name = "cc-touch-fish"
version = "0.1.2"
description = "A desktop pet application with Claude Code integration"
authors = [""]
edition = "2021"

[lib]
name = "cc_touch_fish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.32"
dirs = "5"
rfd = "0.15"
